# narwhal-fino

./: README.md
benchmark/: fabfile.py
benchmark/benchmark/: commands.py  config.py  local.py
config/src/: lib.rs
consensus/: Cargo.toml
consensus/src/: lib.rs
consensus/src/tests/: consensus_tests.rs
node/: Cargo.toml
node/src/: benchmark_client.rs  main.rs
primary/: Cargo.toml
primary/src/: aggregators.rs  core.rs  lib.rs  messages.rs  primary.rs  proposer.rs
primary/src/tests/: core_tests.rs  proposer_tests.rs
worker/: Cargo.toml
worker/src/: batch_maker.rs
