[package]
name = "node"
version = "0.1.0"
authors = ["George Danezis <gdanezis@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.2", features = ["codec"] }
clap = "2.33.3"
env_logger = "0.7.1"
log = "0.4.11"
bytes = "1.0.1"
bincode = "1.3.1"
anyhow = "1.0.40"
rand = "0.7.3"
futures = "0.3.15"
eyre = { version = "0.6.8", optional = true }

config = { path = "../config" }
store = { path = "../store" }
crypto = { path = "../crypto" }
primary = { path = "../primary" }
worker = { path = "../worker" }
consensus = { path = "../consensus" }

anvil-rpc = { package = "anvil-rpc", git = "https://github.com/foundry-rs/foundry", optional = true }
ethers = { version = "2.0.4", optional = true }
weld-evm = { git = "ssh://git@github.com/siddhantsharma301/weld.git", branch = "sid/fino-bench", package = "evm-abci", optional = true }
weld-narwhal = { git = "ssh://git@github.com/siddhantsharma301/weld.git", branch = "sid/fino-bench", package = "narwhal-abci", optional = true }
yansi = { version = "0.5.1", optional = true }

[features]
benchmark = ["worker/benchmark", "primary/benchmark", "consensus/benchmark"]
weld = [
    "worker/weld",
    "primary/weld",
    "consensus/weld",
    "anvil-rpc",
    "ethers",
    "eyre",
    "weld-evm",
    "weld-narwhal",
    "yansi",
]

[[bin]]
name = "benchmark_client"
path = "src/benchmark_client.rs"
required-features = ["benchmark"]

[[bin]]
name = "weld_client"
path = "src/benchmark_client.rs"
required-features = ["weld"]
